fixed alignment issue

--- a/public/CSS/weather_map.css
+++ b/public/CSS/weather_map.css
@@ -3,7 +3,7 @@ h1, h2 {
 }
 #map {
 	border: 4px solid #DFB683;
-	width: 990px;
+	width: 1005px;
 	height: 200px;
 	padding-bottom: 20%;
 	margin-top: 20px;
